AR-647: Added unbind and fixed errors
