# public/api-spec-v1.yaml
@@ -2446,6 +2446,35 @@ paths:
           allowReserved: false
       deprecated: false
     parameters: []
+  '/v1/screens/{id}/unbind':
+    ref: 'JWT Token'
+    post:
+      operationId: postScreenUnbind
+      tags:
+        - Screens
+      responses:
+        201:
+          description: 'Unbind screen from machine'
+      summary: 'Unbind screen from machine'
+      description: ''
+      parameters:
+        -
+          name: id
+          in: path
+          description: ''
+          required: false
+          deprecated: false
+          allowEmptyValue: false
+          schema: []
+          style: simple
+          explode: false
+          allowReserved: false
+      requestBody:
+        description: 'Unbind from machine'
+        content: {  }
+        required: false
+      deprecated: false
+    parameters: []
   /v1/slides:
     get:
       operationId: get-v1-slides
@@ -3775,6 +3804,8 @@ components:
           type: array
           items:
             type: string
+        screenUser:
+          type: string
     Screen.Screen.jsonld:
       type: object
       description: ''
@@ -3840,6 +3871,8 @@ components:
           type: array
           items:
             type: string
+        screenUser:
+          type: string
     Screen.ScreenInput:
       type: object
       description: ''
